# recipe-reader

./: Cargo.toml
src/: lib.rs  tests.rs
tests/: basic_parse  config_more_than_one  duplicate_file  duplicate_use  executable_start_extra_token  export_more_than_one  extra_deps_token  extra_end_token  extra_generate_c_token  extra_generate_ir_token  extra_nolibc_token  extra_refs_token  library_start_extra_token  library_start_unknown_type  library_unknown_type  many_empty_lines  missing_target_name  unknown_option  unknown_target_type  use_option_missing_args
